add stubs for everything

--- a/make-talk-01/main.tex
+++ b/make-talk-01/main.tex
@@ -33,10 +33,10 @@
 \definecolor{darkgreen}{rgb}{0,0.6,0}
 \definecolor{mauve}{rgb}{0.58,0,0.82}
 
-\title[2024-07-08-scipy-teen-track-concluding-talk]{Wrapping up}
+\title[2024-07-08-scipy-teen-track-talk-01]{Welcome to the SciPy 2024 Teen Track}
 \author{Jim Pivarski}
 \institute{Princeton University -- IRIS-HEP}
-\date{July 9, 2024}
+\date{July 8, 2024}
 
 \usetikzlibrary{shapes.callouts}
 
