--- a/make-talk-06/main.tex
+++ b/make-talk-06/main.tex
@@ -33,7 +33,7 @@
 \definecolor{darkgreen}{rgb}{0,0.6,0}
 \definecolor{mauve}{rgb}{0.58,0,0.82}
 
-\title[2024-07-08-scipy-teen-track-introductory-talk]{Welcome to the SciPy 2024 Teen Track}
+\title[2024-07-08-scipy-teen-track-talk-06]{What is a neural network?}
 \author{Jim Pivarski}
 \institute{Princeton University -- IRIS-HEP}
 \date{July 8, 2024}
