force Matplotlib to load in JupyterLite

--- a/site/files/02-python-review.ipynb
+++ b/site/files/02-python-review.ipynb
@@ -2130,6 +2130,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f9f02122-ad75-4759-8ba6-4d860cd22828",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib  # force it to load (JupyterLite only)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1615bd72-780c-4478-9550-a7dbd45871de",
    "metadata": {},
    "outputs": [],
