can't use '%load' in JupyterLite

--- a/site/files/02-python-review.ipynb
+++ b/site/files/02-python-review.ipynb
@@ -391,19 +391,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Try to solve it here before uncommenting the next cell.\n",
+    "# Try to solve it here before using the next cell to show solutions.\n",
     "\n",
     "print(\"???\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "51589e5f-5048-4fd6-b233-bf6c2d0d2970",
+   "cell_type": "markdown",
+   "id": "b6f3d65d-2c90-4566-882a-cfb6463cfdea",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# %load solutions/02-doubling-pennies.py"
+    "<details>\n",
+    "    <summary><b>Solution (no not peek!)</b></summary>\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "money = 0.01\n",
+    "\n",
+    "for day in range(30):\n",
+    "    money = money * 2\n",
+    "\n",
+    "money\n",
+    "```\n",
+    "    \n",
+    "</details>"
    ]
   },
   {
@@ -1656,15 +1667,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Try to solve it here before uncommenting the next cell.\n",
+    "# Try to solve it here before using the next cell to show solutions.\n",
     "\n",
     "print(\"???\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ec9845a1-84f0-4296-8f87-2a4287b88a89",
+   "cell_type": "markdown",
+   "id": "60264b3c-340f-4806-8200-1f0623a9023d",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -1672,9 +1682,16 @@
     },
     "tags": []
    },
-   "outputs": [],
    "source": [
-    "# %load solutions/02-consecutive-elements.py"
+    "<details>\n",
+    "    <summary><b>Solution (no not peek!)</b></summary>\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "array[1:] - array[:-1]\n",
+    "```\n",
+    "    \n",
+    "</details>"
    ]
   },
   {
@@ -1765,19 +1782,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Try to solve it here before uncommenting the next cell.\n",
+    "# Try to solve it here before using the next cell to show solutions.\n",
     "\n",
     "print(\"???\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cf5146db-e358-4c56-b401-7ee9e5a2b7f4",
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "440efd6c-c103-4316-9856-4c1da11b99c6",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "# %load solutions/02-non-negative-sqrt.py"
+    "<details>\n",
+    "    <summary><b>Solution (no not peek!)</b></summary>\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "<details>\n",
+    "    <summary><b>Solution (no not peek!)</b></summary>\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "array[1:] - array[:-1]\n",
+    "```\n",
+    "    \n",
+    "</details>"
    ]
   },
   {
@@ -2345,29 +2375,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Try to solve it here before uncommenting the next cell.\n",
+    "# Try to solve it here before using the next cell to show solutions.\n",
     "\n",
     "print(\"???\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e52f81e-5766-48e4-8a80-f4958c09a9aa",
+   "cell_type": "markdown",
+   "id": "79f6867b-20cd-4583-b942-e80287d32817",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# %load solutions/02-side-by-side-plots.py"
+    "<details>\n",
+    "    <summary><b>Solution (no not peek!)</b></summary>\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(12, 5))\n",
+    "\n",
+    "penguins[penguins[\"species\"] == \"Adelie\"].plot.scatter(\"bill_length_mm\", \"bill_depth_mm\", color=\"blue\", ax=ax1)\n",
+    "penguins[penguins[\"species\"] == \"Gentoo\"].plot.scatter(\"bill_length_mm\", \"bill_depth_mm\", color=\"orange\", ax=ax1)\n",
+    "penguins[penguins[\"species\"] == \"Chinstrap\"].plot.scatter(\"bill_length_mm\", \"bill_depth_mm\", color=\"green\", ax=ax1)\n",
+    "ax1.set_xlabel(\"bill length (mm)\")\n",
+    "ax1.set_ylabel(\"bill depth (mm)\")\n",
+    "\n",
+    "penguins[penguins[\"species\"] == \"Adelie\"].plot.scatter(\"flipper_length_mm\", \"body_mass_g\", color=\"blue\", ax=ax2)\n",
+    "penguins[penguins[\"species\"] == \"Gentoo\"].plot.scatter(\"flipper_length_mm\", \"body_mass_g\", color=\"orange\", ax=ax2)\n",
+    "penguins[penguins[\"species\"] == \"Chinstrap\"].plot.scatter(\"flipper_length_mm\", \"body_mass_g\", color=\"green\", ax=ax2)\n",
+    "ax2.set_xlabel(\"flipper length (mm)\")\n",
+    "ax2.set_ylabel(\"body mass (g)\")\n",
+    "\n",
+    "None\n",
+    "```\n",
+    "    \n",
+    "</details>"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f546f6af-a5e5-47d7-9207-d24f89a56878",
+   "cell_type": "markdown",
+   "id": "5e23fb45-166b-46b2-ab17-f044fc0ed497",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# %load solutions/02-side-by-side-plots-slick.py"
+    "<details>\n",
+    "    <summary><b>Slick solution (if you're really cool)</b></summary>\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(12, 5))\n",
+    "\n",
+    "color = {\"Adelie\": \"blue\", \"Gentoo\": \"orange\", \"Chinstrap\": \"green\"}\n",
+    "\n",
+    "for species in [\"Adelie\", \"Gentoo\", \"Chinstrap\"]:\n",
+    "    penguins[penguins[\"species\"] == species].plot.scatter(\"bill_length_mm\", \"bill_depth_mm\", color=color[species], ax=ax1)\n",
+    "    penguins[penguins[\"species\"] == species].plot.scatter(\"flipper_length_mm\", \"body_mass_g\", color=color[species], ax=ax2)\n",
+    "\n",
+    "ax1.set_xlabel(\"bill length (mm)\")\n",
+    "ax1.set_ylabel(\"bill depth (mm)\")\n",
+    "\n",
+    "ax2.set_xlabel(\"flipper length (mm)\")\n",
+    "ax2.set_ylabel(\"body mass (g)\")\n",
+    "\n",
+    "None\n",
+    "```\n",
+    "    \n",
+    "</details>"
    ]
   }
  ],
