--- a/site/files/02-python-review.ipynb
+++ b/site/files/02-python-review.ipynb
@@ -1799,12 +1799,7 @@
     "\n",
     "```python\n",
     "\n",
-    "<details>\n",
-    "    <summary><b>Solution (no not peek!)</b></summary>\n",
-    "\n",
-    "```python\n",
-    "\n",
-    "array[1:] - array[:-1]\n",
+    "np.sqrt(random_numbers[random_numbers >= 0])\n",
     "```\n",
     "    \n",
     "</details>"
