writing the math background

--- a/site/files/02-python-review.ipynb
+++ b/site/files/02-python-review.ipynb
@@ -13,13 +13,15 @@
    "id": "47d1bf3a-98ac-4068-9b8b-3f9e3ce3f505",
    "metadata": {},
    "source": [
-    "All the Python you need to know!\n",
+    "This notebook covers all the Python you need to know _for our tutorial_ (today and tomorrow).\n",
     "\n",
-    "For today's and tomorrow's sessions, that is.\n",
+    "Python has a lot of nice features, but we'll only be using what is presented in this notebook.\n",
     "\n",
-    "Everything in this notebook should be familiar, and if it is, we'll go through it quickly.\n",
+    "I'm also assuming that this is all familiar, just a review. If so, we'll go through it quickly. If not, ask me to slow down and explain any features that are new to you.\n",
     "\n",
-    "You can run a cell in the notebook by clicking on it and typing shift-enter or control-enter."
+    "To run cells along with me, click in the cell and type shift-enter or control-enter.\n",
+    "\n",
+    "Order matters, so if you need to start over, select a cell and choose \"Restart Kernel and Run up to Selected Cell\" from the \"Kernel\" menu."
    ]
   },
   {
