writing the math background

--- a/site/files/02-python-review.ipynb
+++ b/site/files/02-python-review.ipynb
@@ -354,7 +354,7 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## For loops"
+    "## For loops and while loops"
    ]
   },
   {
@@ -371,6 +371,43 @@
   {
    "cell_type": "markdown",
    "id": "60531f72-ec6b-4d21-8b12-6c3d56ad7ac9",
+   "metadata": {},
+   "source": [
+    "<br><br><br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e04ec88d-578c-408c-9f1e-13b0780832a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 0\n",
+    "while x < 10:\n",
+    "    print(x)\n",
+    "    x += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ea2b6ae-bb0e-4676-952c-3554c4ca39bd",
+   "metadata": {},
+   "source": [
+    "<br><br><br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c69fa08e-46e5-44ab-b8d7-3313ab75df7b",
+   "metadata": {},
+   "source": [
+    "`for` can be seen as a shorthand for `while`. Always use a `for` loop if possible!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ac85c84-aeb0-47f7-bf79-fc849cd3c0bc",
    "metadata": {},
    "source": [
     "<br><br><br>"
