--- a/site/files/02-python-review.ipynb
+++ b/site/files/02-python-review.ipynb
@@ -441,7 +441,7 @@
    "metadata": {},
    "source": [
     "<details>\n",
-    "    <summary><b>Solution (no not peek!)</b></summary>\n",
+    "    <summary><b>Solution (do not peek!)</b></summary>\n",
     "\n",
     "```python\n",
     "\n",
@@ -1723,7 +1723,7 @@
    },
    "source": [
     "<details>\n",
-    "    <summary><b>Solution (no not peek!)</b></summary>\n",
+    "    <summary><b>Solution (do not peek!)</b></summary>\n",
     "\n",
     "```python\n",
     "\n",
@@ -1834,7 +1834,7 @@
    },
    "source": [
     "<details>\n",
-    "    <summary><b>Solution (no not peek!)</b></summary>\n",
+    "    <summary><b>Solution (do not peek!)</b></summary>\n",
     "\n",
     "```python\n",
     "\n",
@@ -2420,7 +2420,7 @@
    "metadata": {},
    "source": [
     "<details>\n",
-    "    <summary><b>Solution (no not peek!)</b></summary>\n",
+    "    <summary><b>Solution (do not peek!)</b></summary>\n",
     "\n",
     "```python\n",
     "\n",
