starting into session 2

--- a/site/files/02-python-review.ipynb
+++ b/site/files/02-python-review.ipynb
@@ -117,6 +117,7 @@
     "| $x - y$ | | `x - y` |\n",
     "| $x \\times y$ | | `x * y` |\n",
     "| $x \\div y$ | | `x / y` |\n",
+    "| $x \\bmod y$ | | `x % y` |\n",
     "| $x^n$ | | `x**n` |\n",
     "| $(x + y) \\times z$ | | `(x + y) * z` |"
    ]
@@ -132,16 +133,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "674c609f-bd16-43cc-8dd1-4b12532beb81",
+   "id": "e043fdbf-e10f-4754-ba51-ab05f3d35094",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"addition:\", 3 + 2)\n",
-    "print(\"subtraction:\", 3 - 2)\n",
-    "print(\"multiplication:\", 3 * 2)\n",
-    "print(\"division:\", 3 / 2)\n",
-    "print(\"exponentiation:\", 3**2)\n",
-    "print(\"parentheses:\", (3 + 2) * 100, \"versus\", 3 + 2 * 100)"
+    "print(f\"addition:       {3 + 2 = }\")\n",
+    "print(f\"subtraction:    {3 - 2 = }\")\n",
+    "print(f\"multiplication: {3 * 2 = }\")\n",
+    "print(f\"division:       {3 / 2 = }\")\n",
+    "print(f\"modulo:         {3 % 2 = }\")\n",
+    "print(f\"exponentiation: {3**2  = }\")\n",
+    "print(f\"parentheses:    {(3 + 2) * 100 = } versus {3 + 2 * 100 = }\")"
    ]
   },
   {
