--- a/site/files/04-fitting-exercise.ipynb
+++ b/site/files/04-fitting-exercise.ipynb
@@ -166,9 +166,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def better_fit(a, b, measurements):\n",
+    "def better_fit(i, a, b, measurements):\n",
+    "    lowest_badness = badness_of_fit(a, b, measurements)\n",
+    "    \n",
+    "    if i % 2 == 0:\n",
+    "        for new_a in [a + 1, a + 0.1, a + 0.01, a - 0.01, a - 0.1, a - 1]:\n",
+    "            trial = badness_of_fit(new_a, b, measurements)\n",
+    "            if trial < lowest_badness:\n",
+    "                lowest_badness = trial\n",
+    "                a = new_a\n",
     "\n",
-    "    print(\"???\")\n",
+    "    else:\n",
+    "        for new_b in [b + 100, b + 10, b + 1, b - 1, b - 10, b - 100]:\n",
+    "            trial = badness_of_fit(a, new_b, measurements)\n",
+    "            if trial < lowest_badness:\n",
+    "                lowest_badness = trial\n",
+    "                b = new_b\n",
     "\n",
     "    return a, b"
    ]
@@ -198,6 +211,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "i = 0   # iteration number\n",
     "a = 30\n",
     "b = -3000"
    ]
@@ -217,7 +231,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a, b = better_fit(a, b, measurements)\n",
+    "a, b = better_fit(i, a, b, measurements)\n",
+    "i += 1\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "\n",
@@ -229,7 +244,7 @@
     "\n",
     "badness = badness_of_fit(a, b, measurements)\n",
     "\n",
-    "ax.legend([], [], title=f\"a = {a}\\nb = {b}\\nbadness = {badness}\", loc=\"upper left\")\n",
+    "ax.legend([], [], title=f\"i = {i}\\na = {a}\\nb = {b}\\nbadness = {badness}\", loc=\"upper left\")\n",
     "\n",
     "None"
    ]
@@ -239,19 +254,74 @@
    "id": "3991aa66-8720-4c8c-b7f0-27a77dcec229",
    "metadata": {},
    "source": [
+    "<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a87172f-e815-4f97-81b1-a5557a571658",
+   "metadata": {},
+   "source": [
+    "**How good can you expect it to be?**\n",
+    "\n",
+    "Approximately this good:\n",
+    "\n",
+    "<img src=\"img/04-best-fit.svg\" width=\"600\">\n",
+    "\n",
+    "The data are not quite linear, so a model that assumes a straight line can only do so much."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39cfeff7-5b29-4547-976f-0f53ce6211e3",
+   "metadata": {},
+   "source": [
     "<br><br><br>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6dcf7440-d9de-4bad-87db-4b968481453e",
+   "id": "2427ee65-3258-4bf4-9589-51d2d405ecf9",
    "metadata": {},
    "source": [
-    "**For experts:**\n",
+    "**If it was too easy:**\n",
     "\n",
-    "If you're already familiar with linear fitting, notice that this **badness of fit** criterion is not the ordinary least squares that is usually used.\n",
+    "Extra credit: What if you fit to a quadratic function instead of a linear function?\n",
     "\n",
-    "The normal techniques rely on the _squares_ of differences. What difference does it make to use the absolute differences instead?"
+    "```python\n",
+    "def body_mass(flipper_length, a, b, c):\n",
+    "    return a * flipper_length + b + c * flipper_length**2\n",
+    "```\n",
+    "\n",
+    "Note that you have to propagate this new argument, `c`, into all of the functions above. \"Restart Kernel and Run All Cells\" under the \"Kernel\" menu can be helpful."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a54392dc-a599-4ded-9c47-aa62e666bd81",
+   "metadata": {},
+   "source": [
+    "<br><br><br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37c3bf5a-e5c2-40d5-9c9f-b90254930508",
+   "metadata": {},
+   "source": [
+    "Theoretical diversion: Notice that we are minimizing the absolute value of differences between the measurement and the model,\n",
+    "\n",
+    "```python\n",
+    "            badness += abs(body_mass(measured_length, a, b) - measured_mass)\n",
+    "```\n",
+    "\n",
+    "Normally, one would minimize the square of the differences,\n",
+    "\n",
+    "```python\n",
+    "            badness += (body_mass(measured_length, a, b) - measured_mass)**2\n",
+    "```\n",
+    "\n",
+    "What difference does that make?"
    ]
   },
   {
@@ -267,9 +337,9 @@
    "id": "d4a53d3d-d47d-45fa-a2af-be18fc6e982c",
    "metadata": {},
    "source": [
-    "**If you're done early:**\n",
+    "**If everyone is done early:**\n",
     "\n",
-    "Let me know! If everyone finishes early, we'll have more time for machine learning."
+    "Let me know! If we finish early, we'll have more time to do machine learning."
    ]
   }
  ],
