figured out fitting issues

--- a/site/files/04-fitting-exercise.ipynb
+++ b/site/files/04-fitting-exercise.ipynb
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "measurements = penguins[[\"flipper_length_mm\", \"body_mass_g\"]].values"
+    "measurements = penguins[[\"flipper_length_mm\", \"body_mass_g\"]].dropna().values"
    ]
   },
   {
@@ -131,8 +131,7 @@
     "    badness = 0\n",
     "\n",
     "    for measured_length, measured_mass in measurements:\n",
-    "        if not np.isnan(measured_length) and not np.isnan(measured_mass):\n",
-    "            badness += abs(body_mass(measured_length, a, b) - measured_mass)\n",
+    "        badness += abs(body_mass(measured_length, a, b) - measured_mass)\n",
     "    \n",
     "    return badness"
    ]
@@ -167,21 +166,8 @@
    "outputs": [],
    "source": [
     "def better_fit(i, a, b, measurements):\n",
-    "    lowest_badness = badness_of_fit(a, b, measurements)\n",
     "    \n",
-    "    if i % 2 == 0:\n",
-    "        for new_a in [a + 1, a + 0.1, a + 0.01, a - 0.01, a - 0.1, a - 1]:\n",
-    "            trial = badness_of_fit(new_a, b, measurements)\n",
-    "            if trial < lowest_badness:\n",
-    "                lowest_badness = trial\n",
-    "                a = new_a\n",
-    "\n",
-    "    else:\n",
-    "        for new_b in [b + 100, b + 10, b + 1, b - 1, b - 10, b - 100]:\n",
-    "            trial = badness_of_fit(a, new_b, measurements)\n",
-    "            if trial < lowest_badness:\n",
-    "                lowest_badness = trial\n",
-    "                b = new_b\n",
+    "    print(\"???\")\n",
     "\n",
     "    return a, b"
    ]
@@ -262,13 +248,13 @@
    "id": "6a87172f-e815-4f97-81b1-a5557a571658",
    "metadata": {},
    "source": [
-    "**How good can you expect it to be?**\n",
+    "**How good is good enough?**\n",
     "\n",
-    "Approximately this good:\n",
+    "<img src=\"img/04-my-best-fit.svg\" width=\"600\"><img src=\"img/04-best-fit.svg\" width=\"600\">\n",
     "\n",
-    "<img src=\"img/04-best-fit.svg\" width=\"600\">\n",
+    "On the left is the best I managed to do with a simple algorithm. It's good enough for this project.\n",
     "\n",
-    "The data are not quite linear, so a model that assumes a straight line can only do so much."
+    "On the right is a state-of-the-art best fit."
    ]
   },
   {
@@ -312,13 +298,13 @@
     "Theoretical diversion: Notice that we are minimizing the absolute value of differences between the measurement and the model,\n",
     "\n",
     "```python\n",
-    "            badness += abs(body_mass(measured_length, a, b) - measured_mass)\n",
+    "        badness += abs(body_mass(measured_length, a, b) - measured_mass)\n",
     "```\n",
     "\n",
     "Normally, one would minimize the square of the differences,\n",
     "\n",
     "```python\n",
-    "            badness += (body_mass(measured_length, a, b) - measured_mass)**2\n",
+    "        badness += (body_mass(measured_length, a, b) - measured_mass)**2\n",
     "```\n",
     "\n",
     "What difference does that make?"
