removed all mention of absolute-difference fitting

--- a/site/files/03-math-background.ipynb
+++ b/site/files/03-math-background.ipynb
@@ -833,24 +833,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff8e2180-6b79-456c-8954-255cd428998b",
-   "metadata": {},
-   "source": [
-    "<br><br><br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "76472cd9-ce09-44c2-b2f0-f76471352cf4",
-   "metadata": {},
-   "source": [
-    "A model _generalizes_ the measurements.\n",
-    "\n",
-    "Whereas a measurement says what the data _are_, a model says what the data _would be_."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "03d17bf4-0d15-4434-9774-22704ce0d798",
    "metadata": {},
    "source": [
@@ -924,6 +906,74 @@
   {
    "cell_type": "markdown",
    "id": "2d758302-d1bf-4a4b-ac0a-6f34abd1ed53",
+   "metadata": {},
+   "source": [
+    "<br><br><br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d257494-866c-44aa-8b59-470bbb2923b2",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "### Summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c29e49c-d9cc-4b04-928e-2bbef8ce535d",
+   "metadata": {},
+   "source": [
+    "A model _generalizes_ the measurements.\n",
+    "\n",
+    "Whereas measurements says what the data _are_, a model says what the data _would be_."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9743ff44-a6a4-497a-9265-de5eb30cf067",
+   "metadata": {},
+   "source": [
+    "<br><br><br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "068299b4-38de-41ec-b4a6-1f6f40fd68d4",
+   "metadata": {},
+   "source": [
+    "A model is a function from potential values of attributes (any point in the N-dimensional space) to\n",
+    "\n",
+    "* the probability that that combination of attributes exists, or\n",
+    "* a prediction of some other attribute (or its probability), or\n",
+    "* a category that we use to organize the data but isn't directly measurable, such as species (or its probability).\n",
+    "\n",
+    "Models come from our heads. We make them up, but some are better than others."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35553a20-f7eb-4c28-8e03-8891341bfca3",
+   "metadata": {},
+   "source": [
+    "<br><br><br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a32da0ab-deec-4f2c-80b8-8d4ae15dd7e6",
+   "metadata": {},
+   "source": [
+    "A measurement is just a point in the N-dimensional space.\n",
+    "\n",
+    "Measurements come from the real world. We don't make them up."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd0a1f9d-920c-44a2-a164-debf294773d3",
    "metadata": {},
    "source": [
     "<br><br><br>"
@@ -1429,8 +1479,7 @@
     "    badness = 0\n",
     "\n",
     "    for measured_length, measured_mass in measurements:\n",
-    "        if not np.isnan(measured_length) and not np.isnan(measured_mass):\n",
-    "            badness += abs(body_mass(measured_length, a, b) - measured_mass)\n",
+    "        badness += (body_mass(measured_length, a, b) - measured_mass)**2\n",
     "    \n",
     "    return badness"
    ]
@@ -1461,7 +1510,8 @@
     "y = body_mass(x, a, b)\n",
     "ax.plot(x, y, color=\"orange\")\n",
     "\n",
-    "badness = badness_of_fit(a, b, penguins[[\"flipper_length_mm\", \"body_mass_g\"]].values)\n",
+    "measurements = penguins[[\"flipper_length_mm\", \"body_mass_g\"]].dropna().values\n",
+    "badness = badness_of_fit(a, b, measurements)\n",
     "\n",
     "ax.legend([], [], title=f\"a = {a}\\nb = {b}\\nbadness = {badness}\", loc=\"upper left\")\n",
     "\n",
