got it: this is a good explanation

--- a/site/files/04-fitting-exercise.ipynb
+++ b/site/files/04-fitting-exercise.ipynb
@@ -230,7 +230,7 @@
     "\n",
     "badness = badness_of_fit(a, b, measurements)\n",
     "\n",
-    "ax.legend([], [], title=f\"i = {i}\\na = {a}\\nb = {b}\\nbadness = {badness}\", loc=\"upper left\")\n",
+    "ax.legend([], [], title=f\"i = {i}\\na = {a:.2f}\\nb = {b:.0f}\\nbadness = {badness:.2e}\", loc=\"upper left\")\n",
     "\n",
     "None"
    ]
