--- a/site/files/04-fitting-exercise.ipynb
+++ b/site/files/04-fitting-exercise.ipynb
@@ -182,12 +182,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e1d59d69-3aa6-4f2e-b006-034771d2839a",
+   "metadata": {},
+   "source": [
+    "**Suggestion:** Try tuning it by hand before writing an algorithm. The algorithm formalizes what you would do intuitively."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c001c4a7-ef01-4ae7-b3d5-9aef8a24f7d9",
+   "metadata": {},
+   "source": [
+    "<br><br><br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dfaeb3d1-3885-46bf-ab15-7cd245342089",
    "metadata": {},
    "source": [
-    "**To test:**\n",
-    "\n",
-    "Run this cell to initialize `a` and `b` to some bad values:"
+    "**To test:** Run the cell below to initialize `a` and `b` to some bad values:"
    ]
   },
   {
