07 is done: neural network exercise

--- a/site/files/05-scikit-learn.ipynb
+++ b/site/files/05-scikit-learn.ipynb
@@ -594,10 +594,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1d374ad1-16af-4445-bee7-28b1c543f8d7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"overflow: hidden;\"><iframe src=\"https://books.google.com/ngrams/graph?content=artificial+intelligence%2Cmachine+learning%2Cdata+mining%2Cneural+network%2Cdeep+learning&year_start=1950&year_end=2019&case_insensitive=on&corpus=en-2019&smoothing=3\" width=\"100%\" height=\"800\" scrolling=\"no\" style=\"border: none;\"></div>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%html\n",
     "<div style=\"overflow: hidden;\"><iframe src=\"https://books.google.com/ngrams/graph?content=artificial+intelligence%2Cmachine+learning%2Cdata+mining%2Cneural+network%2Cdeep+learning&year_start=1950&year_end=2019&case_insensitive=on&corpus=en-2019&smoothing=3\" width=\"100%\" height=\"800\" scrolling=\"no\" style=\"border: none;\"></div>"
